--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -90,36 +90,8 @@
                 </button>
 
                 <div class="carrusel-track" id="track">
-                    <div class="carrusel">
-                        <div>
-                            <a href="">
-                                <picture>
-                                <img src="images/bad-boys_movie.jpg" alt="" class="">
-                                </picture>
-                            </a>
-                        
-                        </div>
-                    </div>
-                    <div class="carrusel">
-                        <div>
-                            <a href="">
-                                <picture>
-                                <img src="images/bad-boys_movie.jpg" alt="" class="">
-                                </picture>
-                            </a>
-                        
-                        </div>
-                    </div>
-                        <div class="carrusel">
-                            <div>
-                                <a href="">
-                                    <picture>
-                                    <img src="images/bad-boys_movie.jpg" alt="" class="">
-                                    </picture>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- IMAGENES DEL CARRUSEL -->
+                </div>
 
                 <button class="carrusel-arrow carrusel-next" id="button-next" data-button="button-next"
                     onclick="app.processingButton(event)">
@@ -150,7 +122,7 @@
                         <article>
                             <p id="generos-detallado"></p>
                             <p id="año-detallado"></p>
-                            <p id="clasificacion-detallado">></p>
+                            <p id="clasificacion-detallado"></p>
                         </article>
                     </section>
                 </section>
