--- a/info-series.html
+++ b/info-series.html
@@ -101,36 +101,8 @@
                 </button>
 
                 <div class="carrusel-track" id="track">
-                    <div class="carrusel">
-                        <div>
-                            <a href="">
-                                <picture>
-                                <img src="images/bad-boys_movie.jpg" alt="" class="">
-                                </picture>
-                            </a>
-                        
-                        </div>
-                    </div>
-                    <div class="carrusel">
-                        <div>
-                            <a href="">
-                                <picture>
-                                <img src="images/bad-boys_movie.jpg" alt="" class="">
-                                </picture>
-                            </a>
-                        
-                        </div>
-                    </div>
-                        <div class="carrusel">
-                            <div>
-                                <a href="">
-                                    <picture>
-                                    <img src="images/bad-boys_movie.jpg" alt="" class="">
-                                    </picture>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- IMAGENES DEL CARRUSEL -->
+                </div>
 
                 <button class="carrusel-arrow carrusel-next" id="button-next" data-button="button-next"
                     onclick="app.processingButton(event)">
