--- a/usuario.html
+++ b/usuario.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="main.html">HOME</a></li>
-                <li><a href="peliculas.html">PELÍCULAS</a></li>
-                <li><a href="series.html">SERIES</a></li>
+                <li><a href="soloPelicula.html">PELÍCULAS</a></li>
+                <li><a href="soloSeries.html">SERIES</a></li>
                 <li class="activo"><a href="usuario.html">PERFIL</a></li>
                 <li><a href="index.html">CERRAR SESION</a></li>
             </ul>
