Juntando los js

--- a/register.html
+++ b/register.html
@@ -121,10 +121,10 @@
                         </article>
 
                         <article class="seleccionDeCuponDePago">
-                            <input class="metodoDePago__cuponDePago" type="checkbox" id="pagoFacil" disabled />
+                            <input class="metodoDePago__cuponDePago" type="checkbox" id="pagoFacil" value="pagaConPagoFacil" disabled />
                             <label class="cuponDePago__pagoFacil" for="pagoFacil">Pago facil</label>
 
-                            <input class="metodoDePago__cuponDePago" type="checkbox" id="rapiPago" disabled />
+                            <input class="metodoDePago__cuponDePago" type="checkbox" id="rapiPago" value="pagaConRapiPago" disabled />
                             <label class="cuponDePago__rapiPago" for="rapiPago">RapiPago</label>
                         </article>
                         <span class="cupon-incorrecto"></span>
@@ -142,6 +142,7 @@
                             <a href="./index.html">Cancelar</a>
                         </button>
                     </article>
+                    <span class="formulario-invalido"></span>
                 </section>
             </form>
         </section>
@@ -245,8 +246,9 @@
             </a>
         </section>
     </footer>
-    <script src="scripts/register.js"></script>
-    <script src="./js/sarasa.js"></script>
+    <!-- <script src="scripts/register.js"></script> -->
+    <!-- <script src="./js/sarasa.js"></script> -->
+     <script src="./js/sarasaMasRegister.js"></script>
 </body>
 
 </html>
