nombre y email dinamicos

--- a/usuario.html
+++ b/usuario.html
@@ -25,12 +25,12 @@
         <form action="guardarPerfil">
             <section class="perfil">
                 <img src="images/perfil.png" alt="Imagen de perfil">
-                <h4>nombre de usuario</h4>
+                <h4 id="nombreUsuario">nombre de usuario</h4>
             </section>
             <section class="datosPerfil">
                 <h2>Datos de la cuenta</h2>
                 <h3 class="mail">Mail</h3>
-                <p class="mail">mario@gmail.com</p>
+                <p class="mail" id="email">mario@gmail.com</p>
                 <br>
                 <h3 class="contraseña">Contraseña</h3>
                 <p class="contraseña">************</p>
@@ -163,9 +163,9 @@
                 </div>
                 </a>
          </section>
-    </footer>
+    </footer>   
 
-    
+    <script src="js/usuario.js"></script>
 </body>
 </html>
 
