Requerimientos del correo, nombre y apellido

--- a/register.html
+++ b/register.html
@@ -73,12 +73,15 @@
                 <section class="datosDeUsuario">
                     <input class="form-datos" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"
                         required />
+                        <span class="js-mensajeErrorNombre"></span>
 
                     <input class="form-datos" type="text" name="apellido" id="apellido"
                         placeholder="Ingrese su apellido" required />
+                        <span class="js-mensajeErrorApellido"></span>
 
                     <input class="form-datos" type="email" name="email" id="email" placeholder="Ingrese su E-mail"
                         required />
+                        <span class="js-mensajeErrorCorreo"></span>
 
                     <input class="form-datos" type="text" name="nombreDeUsuario" id="nombreDeUsuario"
                         placeholder="Nombre de usuario" required />
