--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -26,7 +26,7 @@
                 <h1>Restablece tu contraseña</h1>
             </section>
             <section class="h3-desc">
-                <p>Ingresa la direccion de correo electronico que usas, y te
+                <p>Ingresa la direccion de correo electronico y usaurio que usas, y te
                     enviaremos un enlace para reestablecer la contraseña.
                 </p>
             </section>
@@ -35,6 +35,8 @@
         <form class="formlogin" id="form-login" action="index.html" method="get">
             <section class="inputs">
                 <div class="datos">
+                    <h3 class="h3correo">Usuario</h3>
+                    <input type="text" id="email" required placeholder="Ingrese usuario">
                     <h3 class="h3correo">Correo electronico</h3>
                     <input type="email" id="email" required placeholder="Ingrese email">
                 </div>
@@ -55,7 +57,7 @@
             </ul>
         </section>
 
-        <!--
+
         <section class="contenedor-redes">
             <a href="http://www.facebook.com" target="_blank">  
             <div class="icono facebook">
@@ -129,7 +131,7 @@
                         </svg>
                 </div>
                 </a>
-            </section> -->
+            </section>
     </footer>
 </body>
 
