Mensaje de seleccion de metodo de pago

--- a/register.html
+++ b/register.html
@@ -145,7 +145,7 @@
                             <a href="./index.html">Cancelar</a>
                         </button>
                     </article>
-                    <span class="formulario-invalido"></span>
+                    <span class="seleccioneDeMetodoDePago"></span>
                 </section>
             </form>
         </section>
