--- a/info-series.html
+++ b/info-series.html
@@ -19,7 +19,7 @@
                 <li><a href="soloPelicula.html">PELÍCULAS</a></li>
                 <li><a href="soloSeries.html">SERIES</a></li>
                 <li><a href="usuario.html">PERFIL</a></li>
-                <li><a href="index.html">CERRAR SESION</a></li>
+                <li class="cerrarSesion"><a href="index.html">CERRAR SESION</a></li>
             </ul>
         </nav>
     </header>
