--- a/main.html
+++ b/main.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximumscale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Inicio</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/headerYFooter.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header class="header">
@@ -135,7 +136,6 @@
             </section>
     </footer>
     <script src="js/peliculasyseries.js"></script>
-    <script src="js/genero"></script>
     <script src="js/home.js"></script>
 </body>
 </html>
