--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -19,6 +19,7 @@
                 <li><a href="main.html">HOME</a></li>
                 <li><a href="soloPelicula.html">PELÍCULAS</a></li>
                 <li><a href="soloSeries.html">SERIES</a></li>
+                <li><a href="favoritos.html">FAVORITOS</a></li>
                 <li><a href="usuario.html">PERFIL</a></li>
                 <li class="cerrarSesion"><a href="index.html">CERRAR SESION</a></li>
             </ul>
