temporadas/caps responsive arreglado

--- a/register.html
+++ b/register.html
@@ -142,7 +142,7 @@
                     <article class="confirmarOCancelar">
                         <input id="confirm" class="boton" type="submit" value="Confirmar" />
                         <button class="boton" type="button">
-                            <a href="./index.html">Cancelar</a>
+                            <a href="index.html">Cancelar</a>
                         </button>
                     </article>
                     <span class="seleccioneDeMetodoDePago"></span>
