--- a/favoritos.html
+++ b/favoritos.html
@@ -25,12 +25,17 @@
     </header>
     <main>
         <section class="filter-categoria">   
-            <li class="dropdown-container"></li>
+            <li></li>
             <li class="search-container">
                 <input class="search" type="search" placeholder="Buscar por nombre">
                 <img src="images/search.png" alt="Buscar" class="search-icon">
             </li>
         </section>
+                    <style>
+                .filter-categoria .search-container{
+                    margin-top: 6rem;
+                }
+            </style>
         <h2 class="h2-destacados">Favoritos</h2>
         <section class="content">
             <!-- IMAGENES DE LAS PELICULAS Y SERIES -->
