--- a/usuario.html
+++ b/usuario.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="styles/headerYFooter.css">
 </head>
 <body>
-    <header>
-        <a href="index.html"><img class="headerimg"
-                src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
+    <header class="header">
+        <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
         <nav>
             <ul>
                 <li><a href="main.html">HOME</a></li>
