Cambio en el numero de tarjeta del usuario

--- a/usuario.html
+++ b/usuario.html
@@ -168,6 +168,6 @@
          </section>
     </footer>   
 
-    <script src="js/usuario.js"></script>
+    <script src="./js/usuario.js"></script>
 </body>
 </html>
