Disables en checkbox y tarjeta

--- a/usuario.html
+++ b/usuario.html
@@ -54,9 +54,9 @@
                         value="tarjeta" />
                     <input class="metodoDePago_tarjetaDeDebitoOCredito_numeroDeTarjeta" type="number"
                         name="tarjetaDeDebitoOCredito" id="tarjetaDeDebitoOCredito"
-                        placeholder="N&uacute;mero de tarjeta">
+                        placeholder="N&uacute;mero de tarjeta" disabled>
                     <input class="metodoDePago_tarjetaDeDebitoOCredito_codigoDeSeguridad" type="number"
-                        name="codigoDeSeguridad" id="codigoDeSeguridad" placeholder="Clave">
+                        name="codigoDeSeguridad" id="codigoDeSeguridad" placeholder="Clave" disabled>
                 </article>
                 <span class="numeroDeTarjeta-incorrecto"></span>
                 <span class="codigoDeSeguridad-incorrecto"></span>
