Cambios ojo ocultar

--- a/register.html
+++ b/register.html
@@ -100,7 +100,7 @@
                         <article class="pass">
                             <input class="form-datos" type="password" name="repetirContrasenia" id="repetirContrasenia"
                                 placeholder="Repetir contraseña" required />
-                            <span class="fa-regular fa-eye-slash"></span>
+                            <span class="fa-regular fa-eye-slash" id="repeat-pass"></span>
                         </article>
                         <article class="message-error mensaje-repetir"></article>
                     </section>
