Armando seleccion de plan

--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
 
         <section class="planesYFormulario">
             <section class="planes">
-                <article class="planes__plan">
+                <article class="planes__plan" id="plan-estandar">
                     <h3 class="planes__plan__tipoDePlan">Plan Est&aacute;ndar</h3>
                     <h3 class="planes__plan__precio">
                         $7.290,00<span class="mes">/mes</span>
@@ -43,7 +43,7 @@
                     </ul>
                 </article>
 
-                <article class="planes__plan">
+                <article class="planes__plan" id="plan-gold">
                     <h3 class="planes__plan__tipoDePlan">Plan Gold</h3>
                     <h3 class="planes__plan__precio">
                         $8.790,00<span class="mes">/mes</span>
@@ -55,7 +55,7 @@
                     </ul>
                 </article>
 
-                <article class="planes__plan">
+                <article class="planes__plan" id="plan-platino">
                     <h3 class="planes__plan__tipoDePlan">Plan Platino</h3>
                     <h3 class="planes__plan__precio">
                         $10.990,00<span class="mes">/mes</span>
