Cambios en usuario.css y .js

--- a/register.html
+++ b/register.html
@@ -250,8 +250,7 @@
         </section>
     </footer>
     <!-- <script src="scripts/register.js"></script> -->
-    <!-- <script src="./js/sarasa.js"></script> -->
-     <script src="./js/sarasaMasRegister.js"></script>
+     <script src="./js/register.js"></script>
 </body>
 
 </html>
