--- a/usuario.html
+++ b/usuario.html
@@ -28,7 +28,7 @@
         <form id="formularioUsuario" action="guardarPerfil">
             <section class="perfil">
                 <img src="images/perfil.png" alt="Imagen de perfil">
-                <h4 id="nombreUsuario">nombre de usuario</h4>
+                <h4 class="nombre-usuario" id="nombreUsuario">nombre de usuario</h4>
             </section>
             <section class="datosPerfil">
                 <h2>Datos de la cuenta</h2>
